sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:10: error: not found: value trouveBaseJoueur
    posJB = trouveBaseJoueur(i,nbrB)._1
            ^SelectBaseball:11: error: not found: value trouveBaseJoueur
    posJP = trouveBaseJoueur(i,nbrB)._2
            ^SelectBaseball:12: error: not found: value deplaceTrou
    deplaceTrou(posJB,posJP)
    ^